test/compile-fail/unsupported/mod-without-content-in-fn/expected.txt
error: unsupported feature
 --> top.rhdl:2:8
  |
2 |     mod a;
  |         ^ RHDL does not support modules without content inside functions
